--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test_crtweb",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
